--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,9 +84,9 @@
       Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
     </div> -->
 
-   <div class = "thefoot">
+   <div class = "thefoot collapsable">
     <div class="majickdaddies">
-      <h1> MAGJICK DADDIES 2015</h1>
+      <h1> MAJICK DADDIES 2015</h1>
     </div>
     <div class= "logos">
       <a href="https://github.com/pschwyter/mtg_json_api">
