--- a/app/assets/stylesheets/mediasettings.scss
+++ b/app/assets/stylesheets/mediasettings.scss
@@ -1,37 +1,47 @@
  .collapsable {
   @include media(min-width 700px max-width 950px) {
     font-size: 75%;
+
+
    }
    @include media(min-width 560px max-width 700px) {
     font-size: 60%;
-    .fullerton{
-      height: 15em;
 
-      @include span-columns(12);
-        .name{
-          @include span-columns(1);
-        }
-        .label{
-          @include span-columns(10);
-      }
-    }
+    
    }
     @include media(min-width 460px max-width 560px) {
     font-size: 50%;
-    .fullerton{
-      @include span-columns(12);
-      height: 17em;
+   
 
-    }
+  
    }
  
    @include media(min-width 1px max-width 460px) {
     font-size: 40%;
-    .fullerton{
-      @include span-columns(12);
-      height: 19em;
+  
 
 
     }
-   }
+   
 }
+
+.text{
+  @include media(min-width 650px max-width 1080px) {
+      h1{
+        padding-top: .5em;
+        font-size: 1.5em;
+      }
+    }
+    @include media(min-width 370px max-width 650px) {
+      h1{
+        padding-top: .5em;
+        font-size: 1.7em;
+      }
+    }
+      @include media(min-width 0px max-width 370px) {
+      h1{
+        padding-top: .5em;
+        font-size: 1.5em;
+      }
+    }
+  }
