--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -42,29 +42,7 @@
                 
 
                 <div class="modal-card-info">     
-         <!--          <table>
-                    <tr>
-                      <td>
-                      <br>
-                        Set: <%= card.card_set.name %>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        Card Type: <%= card.card_types.first.name %>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        Mana Cost: <%= card.mana_cost %>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <%= card.text %>
-                      </td>
-                    </tr>
-                  </table> -->
+        
                   <h4>Set</h4>
                   <p><%= card.card_set.name %></p>
                   <br>
@@ -75,7 +53,7 @@
                   <p><%= card.mana_cost %></p>          
                   <br>
                   <h4>Card Text</h4>
-                  <p><%= card.text %></p>                  
+                  <p><%= card.text %></p>   
                 </div>
 
                 <div class="modal-card-options">
@@ -85,9 +63,16 @@
                   </div>
 
                   <div class="modal-add-to-list-button">
-                    <%= link_to "Add to Inventory", add_to_inventory_path(card.id), :method => :put %>
-                    <%= link_to "Add to Trade Binder", add_to_tradeable_path(card.id), :method => :put %> 
-                    <%= link_to "Add to Wishlist", add_to_wanted_path(card.id), :method => :put %>
+                    <div class="modal-inventory-button">
+                      <%= link_to "Add to Inventory", add_to_inventory_path(card.id), :method => :put, :remote => true %>
+                    </div>
+                    <div class="modal-tradeable-button">
+                      <%= link_to "Add to Trade Binder", add_to_tradeable_path(card.id), :method => :put, :remote => true %>
+                    </div>
+                    <div class="modal-wishlist-button">
+                      <%= link_to "Add to Wishlist", add_to_wanted_path(card.id), :method => :put, :remote => true %>
+                    </div>                   
+                                         
                   </div>
                   
                 </div>
