--- a/app/assets/stylesheets/modules/sliding_menu.scss
+++ b/app/assets/stylesheets/modules/sliding_menu.scss
@@ -1,8 +1,11 @@
 .message-button {
-  @include span-columns(2 of 12);
-  @include shift(10);
-
+  @include span-columns(4 of 12);
+  @include shift(8);
   display: block;
+
+  button {
+    width: 100%;
+  }
 }
 
 .sliding-menu-content {  
@@ -72,21 +75,18 @@
       margin-left: 24px;
     }
   }
-
+  // button styling
   #submit-button {
     background-color:#477dca;
-    -moz-border-radius:4px;
-    -webkit-border-radius:4px;
     width: 100%;
     height: 5em;
     border-radius:4px;
     border:1px solid #dcdcdc;
     display:inline-block;
     color:#fafafa;
-    font-family:arial;
-    font-size:12px;
+    font-size:1em;
     font-weight:bold;
-    padding:7px 24px;
+    // padding:4px 12px;
     text-decoration:none;
     text-shadow:0px 0px 0px #70706f;
     }#submit-button:hover {
