--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -4,22 +4,29 @@
 			<tbody>
 				<tr>
 					<th>
-					<div class = "wittlepicture">
-						<%= image_tag "box52.svg" %>
-					</div>
+		        <div class="tooltip-item wittlepicture">
+		          <%= image_tag "box52.svg" %> 
+		          <div class="tooltip">
+		            <p>Inventory</p>
+		          </div>
+		        </div>
 					</th>
 
 					<th>
-					<div class = "wittlepicture">
-						<%= image_tag "coins24.svg" %>
-					</div>
-						
+		        <div class="tooltip-item wittlepicture">
+		          <%= image_tag "coins24.svg" %> 
+		          <div class="tooltip">
+		            <p>TradeList</p>
+		          </div>
+		        </div>
 					</th>
 					<th>
-					<div class = "wittlepicture">
-						<%= image_tag "star174.svg" %>
-					</div>
-						
+		        <div class = "tooltip-item wittlepicture">
+		          <%= image_tag "star174.svg" %> 
+		          <div class="tooltip">
+		            <p>WishList</p>
+		          </div>
+		        </div>
 					</th>
 					<th>
 						<h4>Name</h4>
