added styling to card search button

--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -92,10 +92,10 @@
 			</tr>	
 			<tr class="search-form-row">
 				<td></td>
-				<td>
+				<td colspan="3">
 					<div class="box ">
 						<div class ="input", id = "boxes">
-							<br><%= submit_tag("Search") %>
+							<br><%= submit_tag "Search", id: "card-search-submit-button" %>
 						</div>
 				 	</div>
 				</td>
