--- a/app/views/trades/_display_tradeable_wanted_cards.html.erb
+++ b/app/views/trades/_display_tradeable_wanted_cards.html.erb
@@ -10,9 +10,9 @@
 		</tr>
 	</thead>
 	<tbody>
-		<%= if user.tradeable_cards_wanted_by(@trade.other_user(user)).count == 0 %>
+		<% if user.tradeable_cards_wanted_by(@trade.other_user(user)).count == 0 %>
 			<tr>
-				<td colspan="6">No cards to display</td>
+				<td colspan="6"><div class="empty-list-notice">No cards to display</div></td>
 			</tr>
 		<% else %>
 		<% user.tradeable_cards_wanted_by(@trade.other_user(user)).each do |listed_card| %>
