--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -1,6 +1,12 @@
 <h1>New Trade with <%= @user.full_name %></h1>
 <div class="section-inner search-theme mobile-collapse">
 
+	<div class="message-button">
+		<button type="button" class="js-menu-trigger sliding-menu-button" disabled="disabled">
+		  Messages (<%= @trade.comments.count %>)
+		</button>
+	</div>
+
 		<%= form_for [@user, @trade] do |f| %>
 
 			<h2>Your Cards</h2>
