--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,9 +5,9 @@
 		<%= fields_for :card_fields do |ff| %>	
 			<tr>				
 				<td class = "form-box" colspan="3">
-					<div class="input custom-templates name-input">
+<!-- 					<div class="input custom-templates name-input"> -->
 						<%= ff.text_field  :name, :value => @card_name, class: "typeahead name-input", placeholder: "Card Name" %>
-					</div>
+					<!-- </div> -->
 					</td>
 					<td>
 					<div class= "input" id="cardset_users">										
@@ -31,7 +31,7 @@
 				</td>
 				<td></td>
 				<td></td>
-				<td><%= ff.submit "Find", :id => "users-find-submit-button" %></td>
+				<td><%= ff.submit "Find", id: "submit-button" %></td>
 			</tr>
 		<% end %>	
 	<% end %>
