--- a/app/assets/stylesheets/modules/comment.scss
+++ b/app/assets/stylesheets/modules/comment.scss
@@ -24,7 +24,7 @@
   border-bottom: 1px solid transparentize($comment-color, 0.9);
   display: table;
   margin-bottom: $base-spacing;
-  padding-bottom: 1em;
+  padding: 0.5em;
   width: 100%;
 
   .comment-image,
