--- a/app/assets/stylesheets/modules/forms.scss
+++ b/app/assets/stylesheets/modules/forms.scss
@@ -1,3 +1,30 @@
+#new-trade-user-show {
+  @include span-columns(4 of 12);
+  @include shift(5);
+  background-color: #449d44;
+  height: 3em;
+  border-radius:4px;
+  border:1px solid #dcdcdc;
+  display:inline-block;
+  color:#fafafa;
+  font-size:1em;
+  font-weight:bold;
+  // padding:4px 12px;
+  text-decoration:none;
+  text-shadow:0px 0px 0px #70706f;
+
+  a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.4em;
+  }
+  }#new-trade-user-show:hover {
+      background-color: #5cb85c;
+  }#new-trade-user-show:active {
+      position:relative;
+      top:1px;
+  }
+
 #users-find-submit-button {
   background-color:#477dca;
   width: 100%;
