--- a/app/assets/stylesheets/modules/sliding_menu.scss
+++ b/app/assets/stylesheets/modules/sliding_menu.scss
@@ -1,10 +1,17 @@
+
+
 .message-button {
   @include span-columns(4 of 12);
   @include shift(8);
-  display: block;
 
   button {
     width: 100%;
+
+    p {
+      display: inline;
+      vertical-align: center;
+      font-size: 1.2em;
+    }
   }
 }
 
