--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -3,7 +3,7 @@
 
 	<div class="message-button">
 		<button type="button" class="js-menu-trigger sliding-menu-button" disabled="disabled">
-		  Messages (<%= @trade.comments.count %>)
+		  Messages
 		</button>
 	</div>
 
