--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -3,7 +3,7 @@
 
 	<div class="message-button">
 		<button type="button" class="js-menu-trigger sliding-menu-button">
-		  Messages (<%= @trade.comments.count %>)
+		  <p>Messages</p>
 		</button>
 	</div>
 	<nav class="js-menu sliding-menu-content">
