--- a/app/views/users/_tradeable_list.html.erb
+++ b/app/views/users/_tradeable_list.html.erb
@@ -48,6 +48,10 @@
 			</tbody>
 		</table>
 		<div class="empty-list-notice">There don't seem to be any cards in your Trade List. To find and add a card <a href="/cards">click here!</a></div>
+				<% elsif @user.inventory_cards.empty? %>
+						</tbody>
+					</table>
+					<div class="empty-list-notice">No cards to display</div>
 				<% else %>
 					<% i = 0 %>
 					<%= list_fields.fields_for :listed_cards do |listed_card_fields| %>
