--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,47 +17,39 @@
   </head>
 
   <body>
-    <div class = " thehead collapsable "> <!-- Found in /stylesheets/modules/thehead.scss -->
-      <!-- MAINTITLE -->
-      <div class ="maintitle">
-        <div class="text">
-          <h1> MTG </br> Trade Binder </h1>
-        </div>
-      </div>
-      <!-- INTERFACE -->
-      <div class= "interface">
-        <div class = "signin">
-                  </div>
-       
-       <div class = "menu ">
-          <% if current_user %>
-            <div class = "menuitem"><%= link_to "Card Search", root_path %> </br> </div>
-            <div class = "menuitem"><%= link_to "My Binder", user_path(current_user.id)%> </div>
-            <div class = "menuitem"><%= link_to "My Trades", user_trades_path(current_user.id) %> </div>
-            <div class = "menuitem"><%= link_to "Find Trades", users_path%> </div>
-           
-             
-          </div>
-          <div class = "logger">
-            <% if current_user %>
-                 <div class = "signin">
-                  <h1> Signed in as <%= current_user.full_name %>
-                   <%= link_to "Log out", session_path("current"), :method => :delete %> 
-                 </div>
-                </h1>
-              <% end %>
-                </div>
-          <% else %>
-            <div class = "menuitem"><%= link_to "Log in", new_session_path %> </div>
-            <div class = "menuitem"><%= link_to "Sign up", new_user_path %> </div>
-          <% end %>
-        </div>
-        </div>
 
+<header class="navigation" role="banner">
+  <div class="navigation-wrapper">
+    <div href="/cards" class="logo">
+      <h1> MTG </br> Trade <br> Binder </h1>
+    </div>
+    <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+    <nav role="navigation">
+      <ul id="js-navigation-menu" class="navigation-menu show">
+      <% if current_user %>
+        <li class="nav-link"><%= link_to "My Binder", user_path(current_user.id)%></li>
+        <li class="nav-link"><%= link_to "My Trades", user_trades_path(current_user.id) %></li>
+        <li class="nav-link"><%= link_to "Find Trades", users_path%></li>
 
-      </div>
-
-    </header>
+        <li class="nav-link"><%= link_to "Card Search", root_path %></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      <% end %>
+      </ul>
+    </nav>
+    <div class="navigation-tools">
+      <% if current_user %>
+        <li class="nav-link"><p>Signed in as <%= current_user.email %></p></li>
+        <%= link_to "Log out", session_path("current"), :method => :delete, :class =>"sign-up" %> 
+      <% else %>
+        <a href="/sessions/new" class="sign-up">Log In</a>
+        <a href="/users/new" class="sign-up">Sign Up</a>
+      <% end %>
+    </div>
+  </div>
+</header>
 
 
    
