--- a/app/views/users/_display_users.html.erb
+++ b/app/views/users/_display_users.html.erb
@@ -1,5 +1,5 @@
 <h1>Results</h1>
-<table class="table-minimal">
+<table class="table-minimal fixed sortable user-display-table">
 		<thead>
 			<tr>
 				<th>User</th>
@@ -18,7 +18,7 @@
 			<% users.each do |user| %>
 				<tr>
 					<td>
-						<%= link_to user.full_name , user_path(user.id) %>
+						<h2><%= link_to user.full_name , user_path(user.id) %></h2>
 					</td>
 					<td> 
 						$<%= current_user.can_give(user) %> / $<%= current_user.can_receive(user) %>
