--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -1,5 +1,5 @@
 <!-- stylesheet modules/table_styling.scss -->
-<table class="table-minimal">
+<table class="table-minimal sortable">
   <thead>
     <tr>
       <th> Name</th>
@@ -37,65 +37,8 @@
     <% @cards.each do |card| %>
 
     <tr>
-     <td>
-      <div class="modal">
-        <label for="<%= card.id %>">
-          <div class="modal-trigger"><%= card.name %></div>
-        </label>
-        <input class="modal-state" id="<%= card.id %>" type="checkbox" />
-        <div class="modal-window">
-          <div class="modal-inner">
-            <label class="modal-close" for="<%= card.id %>"></label>
-            <div class="modal-display">
-              <h1><%= card.name %></h1>   
-                <div class="modal-card-image">
-                  <img src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
-                </div>
-                <div class="modal-card-info">     
-                  <h4>Set</h4>
-                  <p><%= card.card_set.name %></p>
-                  <br>
-                  <h4>Card Type</h4>
-                  <p><%= card.card_types.first.name %></p>
-                  <br>
-                  <h4>Mana Cost</h4>
-                  <p><%= card.mana_cost %></p>          
-                  <br>
-                  <h4>Card Text</h4>
-                  <p><%= card.text %></p>   
-                </div>
-
-                
-
-
-
-                <div class="modal-card-options">
-
-                  <div class="modal-find-nearby-button">
-                    <div class="button-sexiness"><%= link_to "Find Card Nearby", return_first_search_result_path({card_fields: {name: card.name, card_set: card.card_set.name}, distance: 1}), class: "button", :method => :post %></div>
-                  </div>
-
-                  <div class="modal-add-to-list-button">
-                    
-                    <div class="modal-inventory-button">                      
-                      <div class="button-sexiness"><%= link_to "+ Inventory", add_to_inventory_path(card.id), class: "button", :method => :put, :remote => true %></div>
-                    </div>
-                    <div class="modal-tradeable-button">
-                      <div class="button-sexiness"><%= link_to "+ Trade Binder", add_to_tradeable_path(card.id), class: "button", :method => :put, :remote => true %></div>
-                    </div>
-                    <div class="modal-wishlist-button">
-                      <div class="button-sexiness"><%= link_to "+ Wishlist", add_to_wanted_path(card.id), class: "button", :method => :put, :remote => true %></div>                
-                    </div>                   
-                                         
-                  </div>
-                  
-                </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
+      <td>
+        <%= render 'card_modal', card: card %>
       </td>
       <td>
         <%= card.card_types.first.name %>
@@ -110,25 +53,25 @@
         <a href="#">$<%= card.price %></a>
       </td>
       <td class="inventory">
-        <%= link_to add_to_inventory_path(card.id), :remote => true, class: "add-inventory", data: {card_name: card.name}, :method => :put do %>
-          <div class= "wittlepicture">
-            <%= image_tag "plus24.svg" %>            
-          </div>
-                  <% end %>
+        <div class= "add-to-list-icon">
+          <%= link_to add_to_inventory_path(card.id), :remote => true, class: "add-inventory", data: {card_name: card.name}, :method => :put do %>
+              <p>+</p>   
+          <% end %>
+        </div>
       </td>
       <td class="tradeable">
-        <%= link_to add_to_tradeable_path(card.id), :remote => true, class: "add-tradeable", data: {card_name: card.name}, :method => :put do %> 
-          <div class= "wittlepicture">
-            <%= image_tag "plus24.svg" %>
-          </div>
-                  <% end %>
+        <div class= "add-to-list-icon">
+          <%= link_to add_to_tradeable_path(card.id), :remote => true, class: "add-tradeable", data: {card_name: card.name}, :method => :put do %> 
+              <p>+</p>
+          <% end %>
+        </div>
       </td>
       <td class="wanted">
-        <%= link_to add_to_wanted_path(card.id), :remote => true, class: "add-wanted", data: {card_name: card.name}, :method => :put do %>
-         <div class= "wittlepicture">
-            <%= image_tag "plus24.svg", class: "svg" %>
-         </div>
-                 <%end%> 
+        <div class= "add-to-list-icon">
+          <%= link_to add_to_wanted_path(card.id), :remote => true, class: "add-wanted", data: {card_name: card.name}, :method => :put do %>
+              <p>+</p>
+          <%end%> 
+        </div>  
       </td>
 
     </tr>
