--- a/app/views/trades/_list_trades.html.erb
+++ b/app/views/trades/_list_trades.html.erb
@@ -1,4 +1,4 @@
-	<table class="table-minimal">
+	<table class="table-minimal sortable list-trades-table">
 		<thead>
 			<tr>
 				<th></th>
@@ -26,7 +26,7 @@
 				</td>
 				<td>
 					<% other_user = trade.other_user(current_user) %>
-					<%= link_to "#{other_user.full_name}", user_path(other_user.id) %>
+					<h2><%= link_to "#{other_user.full_name}", user_path(other_user.id) %></h2>
 				</td>
 				<td>
 					<%= trade.card_value_difference_string(current_user) %>
