Removed sortable class from tables

--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -1,5 +1,5 @@
 <!-- stylesheet modules/table_styling.scss -->
-<table class="table-minimal sortable">
+<table class="table-minimal">
   <thead>
     <tr>
       <th> Name</th>
