--- a/app/views/users/_tradeable_list.html.erb
+++ b/app/views/users/_tradeable_list.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @user, :url => "#{current_user.id}/update_lists", method: :post do |f| %>
 	<%= f.fields_for :tradeable_list do |list_fields| %>
-		<table class="table-minimal fixed sortable">			
+		<table class="table-minimal fixed">			
 			<tbody>
 				<tr>
 					<th>
