--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Trade with <%= @user.full_name %></h1>
+<h2>Status - <%= @trade.display_status(current_user) %></h2>
 <div>
 
 	<div class="message-button">
