--- a/app/views/users/_tradeable_list.html.erb
+++ b/app/views/users/_tradeable_list.html.erb
@@ -119,7 +119,7 @@
 			<% end %>
 	<% end %>
 	<% if @user === current_user %>
-		<%= f.submit "Save" %>
+		<%= f.submit "Save", class: "users-save-list-button" %>
 	<% else %>
 	<% end %>
 <% end %>
