--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -126,7 +126,7 @@
 	<% end %>
 
 	<% if @user === current_user %>
-		<%= f.submit "Save" %>
+		<%= f.submit "Save", class: "users-save-list-button" %>
 	<% else %>
 	<% end %>
 <% end %>
