Card name opens modal with card info

--- a/app/views/trades/_display_cancelled_or_complete_trade.html.erb
+++ b/app/views/trades/_display_cancelled_or_complete_trade.html.erb
@@ -15,7 +15,7 @@
 					<%= select_tag "trade[cards_from_#{init_or_receiv}][#{card.id.to_i}]", options_for_select((Array.new(@trade.card_qty_in_trade(card.id, init_or_receiv) + 1) { |i| i }), @trade.card_qty_in_trade(card.id, init_or_receiv)), disabled: bool, :class => "all #{init_or_receiv}-qty", :data => {:price => card.price}  %>
 				</td>
 				<td>
-					<%= card.name %>		
+					<%= render '/cards/card_modal', card: card %>		
 				</td>
 				<td>
 					<%= card.card_set.name %>
