--- a/app/views/cards/_card_display_first.erb
+++ b/app/views/cards/_card_display_first.erb
@@ -21,7 +21,7 @@
 	<% @cards.each do |card| %>
 		<tr>
 			<td id="card-id" data-id=<%= card.id %>>
-				<%= link_to "#{card.name}", card_path(card.id) %>
+				<%= render 'card_modal', card: card %>
 			</td>
 			<td>
 				<%= card.card_types.first.name %>
