Added button styling to trades views

--- a/app/views/trades/edit.html.erb
+++ b/app/views/trades/edit.html.erb
@@ -59,7 +59,7 @@
 						</div>
 					</li>
 				</ul>
-		<%= f.submit "Propose Changes" %>
+		<%= f.submit "Propose Changes", class: "trades-propose-button" %>
 		<% end %>
 	<% end %>
 	
