--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -41,7 +41,7 @@
 				</li>
 			</ul>
 
-			<%= f.submit "Propose Trade" %>
+			<%= f.submit "Propose Trade", class: "trades-propose-button" %>
 		<% end %>
 </div>
 
