--- a/app/assets/stylesheets/modules/new-nav.scss
+++ b/app/assets/stylesheets/modules/new-nav.scss
@@ -319,6 +319,7 @@ header.navigation {
     display: inline;
     float: right;
     font-size: 0.8em;
+    margin-left: 1em;
     margin-top: 1em;
     padding: 0.75em 1em;
     text-transform: uppercase;
