--- a/app/assets/stylesheets/modules/thefoot.scss
+++ b/app/assets/stylesheets/modules/thefoot.scss
@@ -10,6 +10,8 @@ $itempadding: 1%;
 	border-top: 1px solid $linkcolor;
 	border-right: 1px solid $linkcolor;
 	width: 100%;
+	position: fixed;
+	bottom: 0; 
 	img{
 		width: 2em;
 		height: auto;
