--- a/app/assets/stylesheets/modules/forms.scss
+++ b/app/assets/stylesheets/modules/forms.scss
@@ -41,9 +41,16 @@
       position:relative;
       top:1px;
   }
+  
+.accept-button,
+.edit-button {
+  display: inline-block;
+  @include span-columns(2 of 12);
+}
+
 .trades-propose-button {
   background-color:#477dca;
-  width: 20%;
+  width: 100%;
   height: 2em;
   border-radius:4px;
   border:1px solid #dcdcdc;
@@ -58,6 +65,27 @@
   }.trades-propose-button:hover {
       background-color:#2666c1;
   }.trades-propose-button:active {
+      position:relative;
+      top:1px;
+  }
+
+.trades-edit-button {
+  background-color:#f0ad4e;
+  width: 100%;
+  height: 2em;
+  border-radius:4px;
+  border:1px solid #eea236;
+  display:inline-block;
+  color:#fafafa;
+  margin-top: 0.2em;
+  font-size:1em;
+  font-weight:bold;
+  // padding:4px 12px;
+  text-decoration:none;
+  text-shadow:0px 0px 0px #70706f;
+  }.trades-edit-button:hover {
+      background-color:#ed9c2a;
+  }.trades-edit-button:active {
       position:relative;
       top:1px;
   }
