Display qty in accordian ab

--- a/app/views/trades/_display_tradeable_wanted_cards.html.erb
+++ b/app/views/trades/_display_tradeable_wanted_cards.html.erb
@@ -1,7 +1,7 @@
 <table class="table-minimal">
 	<thead>
 		<tr>
-			<th>qty</th>
+			<th>Qty</th>
 			<th>Wanted by <br> <%= @trade.other_user(user).full_name %></th>
 			<th>Available</th>
 			<th>Name</th>
