--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,19 +24,19 @@
 <div class = "clear"></div>
 	<ul class="accordion-tabs">
 		<li class="tab-header-and-content">
-				<%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id, :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
+				<%= link_to "Inventory (#{@user.inventory_cards.count})", fetch_list_path(:list_id => @user.inventory_list.id, :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
 				<div class="tab-content">
 					<%= render "inventory_list" %>
 				</div>
 		</li>
 		<li class="tab-header-and-content">
-			<%= link_to "Trade List", fetch_list_path(:list_id => @user.tradeable_list.id, :user_id => @user.id), :class => "tab-link", :remote => true %>
+			<%= link_to "Trade List (#{@user.tradeable_cards.count})", fetch_list_path(:list_id => @user.tradeable_list.id, :user_id => @user.id), :class => "tab-link", :remote => true %>
 			<div class="tab-content">
 				<%= render "tradeable_list" %>
 			</div>
 		</li>
 		<li class="tab-header-and-content">
-			<%= link_to "Wish List", fetch_list_path(:list_id => @user.wanted_list.id, :user_id => @user.id), :class => "tab-link", :remote => true %>
+			<%= link_to "Wish List (#{@user.wanted_cards.count})", fetch_list_path(:list_id => @user.wanted_list.id, :user_id => @user.id), :class => "tab-link", :remote => true %>
 			<div class="tab-content">
 				<%= render "wanted_list" %>
 			</div>
