added sticky footer jquery function I found on the net

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
       Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
     </div> -->
 
-   <div class = "thefoot collapsable">
+   <div class = "thefoot ", id="footer">
     <div class="majickdaddies">
       <h1> MAJICK DADDIES 2015</h1>
     </div>
