--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -9,7 +9,7 @@
 
 		<%= form_for [@user, @trade] do |f| %>
 
-			<h2>Your Cards</h2>
+			<h2>My Cards</h2>
 			<ul class="accordion-tabs">
 				<li class="tab-header-and-content">
 					<%= link_to "Trade List", root_url, :class => "is-active tab-link", :remote => true %>
@@ -34,7 +34,7 @@
 					</div>
 				</li>
 				<li class="tab-header-and-content">
-					<%= link_to "Wanted by #{current_user.full_name}", root_url, :class => "tab-link", :remote => true %>
+					<%= link_to "Wanted by me", root_url, :class => "tab-link", :remote => true %>
 					<div class="tab-content toggle-select">
 						<%= render "display_tradeable_wanted_cards", :bool => true, :user => @user, :init_or_receiv => @user_status %>
 					</div>
